--- a/Thankyou.html
+++ b/Thankyou.html
@@ -21,7 +21,12 @@
 
 <br/>
 <input type="text" id="otpresult" hidden/>  <br/>
-<li class="userotp"><input  type="text6" id="userotp" name="userotp"  inputmode="numeric" autocomplete="one-time-code" pattern="\d{4}" required/></li>
+<li class="userotp"><input  type="text6" id="userotp" name="userotp" maxlength="4" 
+    pattern="d{4}" onkeyup="this.value=this.value.replace(/[^\d]/,'')"
+  inputmode="numeric" autocomplete="one-time-code"  required/></li>
+<li> <span style="font-size: 12px; color: red;" id="userEnterotp"></span></li>
+<li>&nbsp;</li>
+
 <li class="validate"><input  type="button1" value="Validate OTP" readonly onclick="validate()"></li>
 <br/>
 <li class="userotp1" ><input type="button1" id="Refresh" readonly value="Back to Home page" onclick="history.back()"> </button></li>
@@ -33,11 +38,11 @@
      window.addEventListener('load', function () {
          //by using http GET method - will get fullName & phone number from home page
     const params = (new URL(document.location)).searchParams;
-    const name = params.get('Name');
+    const name = params.get('userName');
     const matches=name.match(/\b[^\d\s]+\b/g); 
     //removing special characters & spaces 
     
-    const phone = params.get('phone');
+    const phone = params.get('userPhone');
   var d=phone.replace(/[^\d]/g, "");//removing non-digit letters
 if (d.length==10) {
     var phonenumber=d.replace(/(\d{3})(\d{3})(\d{4})/,"($1)-$2-$3"); // phone number display like (123)-123-1234
@@ -45,13 +50,14 @@ if (d.length==10) {
 console.log(otp);
 
     document.getElementById('result-name').innerHTML = matches[0]; //
-    console.log(matches[0]);// first Name store in matches[0] & last name in matches[1] location
+    // first Name store in matches[0] & last name in matches[1] location
     document.getElementById('result-phone').innerHTML = phonenumber; //display in thankyoupage span-id
-    console.log(phone);
+    
    document.getElementById('otpresult').value = otp;
 }
 else{
-alert("phone number is not valid please GoBack to HOME page & Enter valid PhoneNumber");
+//alert("phone number is not valid please GoBack to HOME page & Enter valid PhoneNumber");
+return false;
 }
 
 })//function eventlisterner end here
@@ -61,21 +67,29 @@ var attempt=3; //only 3 attempt to varify phone number
 function validate(){
 //copy value of 
 var otpresult =document.getElementById("otpresult").value;
- console.log(otpresult);
+ 
  var userotp =document.getElementById("userotp").value;
- console.log(userotp);
 
+ var mk=/[\s+]/;
 
-if (otpresult==userotp) {
+if (userotp==otpresult) {
    /* if otp is valid then page redirect to" http://pixel6.co/". we use
 "replace" function for redirect page into anather page & user cannot navigate back.
     */
-   alert("Validation successful !");
+  // alert("Validation successful !");
     document.form2.submit(); 
    window.location.replace("http://pixel6.co/");
  
 
-} else {
+} else if(userotp=="" || userotp.match(mk)){
+    document.getElementById("userEnterotp").innerHTML="enter valid otp";
+    document.getElementById("userotp").value="";
+return false;
+}
+
+
+else {
+
     if(attempt==0){
         //if zero attempt left then form will redirect to pageNotfFound (404 error)
         window.location.replace("http://pixel6.co/rgrgrrgrrt");
@@ -83,7 +97,7 @@ if (otpresult==userotp) {
             }
       else{
     attempt--; //attempt decrese by one
-    alert("invalid OTP. Now only   "+attempt+ "  OTP attempt available");
+    document.getElementById("userEnterotp").innerHTML='invalid OTP. Now only   '+ attempt +'  OTP attempt available ';
 
     if(attempt==0){
         // zero attempt left then current window location replace with pageNotfFound (404 error)
